--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
          Do you like designing <input type="text" placeholder="Enter your Preferences"><br><br>
          Do you like to code <input type="checkbox"><br><br>
          Write a description <textarea name="" id="" cols="60" rows="5"></textarea><br><br>
-         <button>Submit</button><br>
+         <button>Submit</button><br><br>
          Hyperlinks are Good <a href="https://mulearn.org/">µLearn</a><br>
 
          <h1><b>Todo List</b></h1>
-         Click on one of the text labels to toggle the related radio buttons:<br>
-         <input type="radio">Apple  <input type="radio">Google  <input type="radio">Microsoft<br>
+         Click on one of the text labels to toggle the related radio buttons:<br><br>
+         <input type="radio">Apple  <input type="radio">Google  <input type="radio">Microsoft<br><br>
          <button type="submit">Submit</button><br><br>
 
          <h1><b>Register Form</b></h1>
          <label for="name">First Name:</label><br>
-         <input type="text">
+         <input type="text"><br>
          <label for="name">Last Name:</label><br>
-         <input type="text">
+         <input type="text"><br>
          <input type="radio">Check me out<br>
          <button>Submit</button>
 </body>
